<?xml version="1.0"?>
<package>
  <name>vision_flight</name>
  <version>0.0.1</version>
  <description>vision-assisted-flight-stack (vision_flight) is a top level guidance software for ncrl-flight-control</description>

  <maintainer email="shengwen1997.tw@gmail.com">Shengwen Cheng</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>
  <buildtool_depend>tf</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
